[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/characters/survivor_1/survivor1_stand.png" type="Texture" id=1]
[ext_resource path="res://src/player/Player.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 64.0

[sub_resource type="CapsuleShape2D" id=1]
height = 18.0088

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_mask = 2
script = ExtResource( 2 )

[node name="PickableArea" type="Area2D" parent="."]
modulate = Color( 0.266667, 0.54902, 0.215686, 1 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickableArea"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1.26277, 0 )
shape = SubResource( 1 )

[node name="RightHand" type="Position2D" parent="."]
position = Vector2( 12.3612, 13.3635 )
__meta__ = {
"_gizmo_extents_": 4.0
}
[connection signal="area_entered" from="PickableArea" to="." method="_on_PickableArea_area_entered"]
[connection signal="area_exited" from="PickableArea" to="." method="_on_PickableArea_area_exited"]
